adapters/ops3_templates/so/mongo_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ${so_name}-mongo
    it.hurtle.id: ${so_name}
  name: ${so_name}-m
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    deploymentconfig: ${so_name}-mongo
