adapters/ops3_templates/so/so_svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generatedby: hurtle.it
  labels:
    app: ${so_name}
    it.hurtle.id: ${so_name}
  name: ${so_name}
  namespace: ${namespace}
spec:
  ports:
  - name: api
    nodePort: 0
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: ${so_name}
  sessionAffinity: None
  type: ClusterIP
