adapters/ops3_templates/so/so_admin_route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/generatedby: hurtle.it
  labels:
    app: ${so_name}
    it.hurtle.id: ${so_name}
  name: ${so_name}-admin
  namespace: ${namespace}
spec:
  host: ${so_name}-a.${namespace}${base_url}
  to:
    kind: Service
    name: ${so_name}-a
status: {}
