adapters/ops3_templates/so/so_route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/generatedby: hurtle.it
  labels:
    app: ${so_name}
  name: ${so_name}
  namespace: ${namespace}
spec:
  host: ${so_name}.${namespace}${base_url}
  to:
    kind: Service
    name: ${so_name}
status: {}
